[package]
name = "minitier-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
etherparse = { workspace = true }
futures-util = { workspace = true }
ipnet = { workspace = true }
quinn = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }

serde_with = "3.9.0"

[dev-dependencies]
rcgen = "0.13.1"
